--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,27 +1,20 @@
-name: Go Release
+name: Go Release for Raspberry Pi
 
 on:
   release:
     types: [created]
 
 jobs:
-  release-linux-amd64:
-    name: release linux/amd64
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        # build and publish in parallel: linux/386, linux/amd64, linux/arm64, windows/386, windows/amd64, darwin/amd64, darwin/arm64
-        goos: [linux, windows]
-        goarch: [amd64, arm64]
-        exclude:
-          - goarch: arm64
-            goos: windows
+  release-linux-arm:
+    name: release linux/arm
+    runs-on: ubuntu-latest    
+          
     steps:
       - uses: actions/checkout@v2
       - uses: wangyoucao577/go-release-action@v1.22
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          goos: ${{ matrix.goos }}
-          goarch: ${{ matrix.goarch }}}
+          goos: linux
+          goarch: arm
           goarm: 5
           extra_files: README.md
